fixed site for dark mode and better icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,7 @@ input[type="range"]::-moz-range-thumb {
 abbr {
     text-decoration: none;
 }
+
+button {
+    cursor: pointer;
+}
